[gd_scene load_steps=10 format=2]

[ext_resource path="res://classes/entity/enemy/thwomp/thwump_sheet.png" type="Texture2D" id=1]
[ext_resource path="res://classes/entity/enemy/thwomp/thwomp.gd" type="Script" id=2]
[ext_resource path="res://classes/particles/dust.png" type="Texture2D" id=3]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=2]
size = Vector2( 24, 12 )

[sub_resource type="RectangleShape2D" id=3]
size = Vector2( 24, 200 )

[sub_resource type="RectangleShape2D" id=4]
size = Vector2( 56, 200 )

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 1
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id=6]
lifetime_randomness = 0.75
flag_disable_z = true
direction = Vector3( -1, -0.4, 0 )
spread = 20.0
gravity = Vector3( 0, -25, 0 )
initial_velocity = 150.0
initial_velocity_random = 0.5
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 250.0
anim_speed = 1.0
anim_offset = 0.25
anim_offset_random = 1.0

[node name="Thwump" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2( 0, 2.38419e-07 )
texture = ExtResource( 1 )
vframes = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Raycasters" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="Raycasters"]
position = Vector2( 8, 0 )
target_position = Vector2( 0, 24 )

[node name="RayCast2" type="RayCast2D" parent="Raycasters"]
position = Vector2( -23, 0 )
target_position = Vector2( 0, 24 )

[node name="RayCast3" type="RayCast2D" parent="Raycasters"]
position = Vector2( 23, 0 )
target_position = Vector2( 0, 24 )

[node name="RayCast4" type="RayCast2D" parent="Raycasters"]
position = Vector2( -8, 0 )
target_position = Vector2( 0, 24 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 8 )
collision_layer = 4
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="DetectionBox" type="Area2D" parent="."]
position = Vector2( 0, 24 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
position = Vector2( 0, 200 )
shape = SubResource( 3 )

[node name="PeekZone" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 24 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PeekZone"]
position = Vector2( 0, 200 )
shape = SubResource( 4 )

[node name="DustLeft" type="GPUParticles2D" parent="."]
material = SubResource( 5 )
position = Vector2( -20, 24 )
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="DustRight" type="GPUParticles2D" parent="."]
material = SubResource( 5 )
position = Vector2( 20, 24 )
rotation = -3.14159
scale = Vector2( 1, -1 )
emitting = false
amount = 4
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 3 )

[node name="SFXUmph" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Hurtbox" to="." method="_on_body_enter"]
